Fixed navbar z-index

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -12,7 +12,10 @@
 }
 
 
+
 .topnav {
+    z-index: 1;
+
     position: fixed;
     top: 0;
     width: 100%;
